# aligncav

./: .gitignore  LICENSE  README.md  pyproject.toml
checkpoints/: best_model.pt
configs/: classifier.yaml  hardware.yaml  rl.yaml
src/aligncav/: __init__.py
src/aligncav/cli/: __init__.py  predict.py  simulate.py  train_classifier.py  train_rl.py
src/aligncav/data/: __init__.py  augmentation.py  dataset.py  loaders.py
src/aligncav/hardware/: __init__.py  motor_controller.py  power_meter.py  video_stream.py
src/aligncav/models/: __init__.py  classifier.py  dqn.py  feature_extractor.py  modal_decomposition.py
src/aligncav/simulation/: __init__.py  beam_profile.py  cavity.py  fresnel.py  mode_generator.py
src/aligncav/training/: __init__.py  classifier_trainer.py  losses.py  metrics.py  rl_trainer.py
tests/: __init__.py  test_models.py  test_simulation.py  test_training.py
